@@ -1,7 +1,9 @@
 0.9.76
 ======
 
- -
+ - Subscribe to people to get new story notifications
+ - See trade members
+ - 
 
 0.9.75
 ======
